manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flocket
  labels:
    name: flocket
    app: flocket
